crates/compylr-host-python/tests/snapshots/fixtures__documented.py.snap
---
source: crates/compylr-host-python/tests/fixtures.rs
expression: functions
---
[
    Function {
        name: "summed",
        params: [
            Param {
                name: "a",
                ty: Int,
            },
            Param {
                name: "b",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Binary {
                    op: Add {
                        checked: Reported,
                    },
                    left: Name(
                        "a",
                    ),
                    right: Name(
                        "b",
                    ),
                },
            ),
        ],
        doc: Some(
            "Return the sum of two integers.",
        ),
        span: Span {
            start: 321,
            end: 414,
        },
    },
    Function {
        name: "described",
        params: [
            Param {
                name: "n",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Bind {
                name: "doubled",
                ty: Int,
                value: Binary {
                    op: Mul {
                        checked: Reported,
                    },
                    left: Name(
                        "n",
                    ),
                    right: Literal(
                        Int(
                            2,
                        ),
                    ),
                },
            },
            Return(
                Name(
                    "doubled",
                ),
            ),
        ],
        doc: Some(
            "Scale a value.\n\n    A longer explanation, spanning several lines, with a blank line above.\n    ",
        ),
        span: Span {
            start: 417,
            end: 591,
        },
    },
    Function {
        name: "undocumented",
        params: [
            Param {
                name: "n",
                ty: Int,
            },
        ],
        ret: Int,
        body: [
            Return(
                Name(
                    "n",
                ),
            ),
        ],
        doc: None,
        span: Span {
            start: 594,
            end: 639,
        },
    },
]
